--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
   <body>
   <header>
    <h1>Silviu Teodor</h1>
-   <div class="pic-wrapper">
-   <img class="pic" src="assets/me.jpg" alt="Silviu Teodor">  
-   </div>
-  </header>  
+   <p class="textgri">Resume</p>
+     <img class="pic" src="assets/me.jpg" alt="Silviu Teodor">  
+    </header>  
   </body> 
 <link type="text/css" rel="stylesheet" href="second.css" />
 </html>    
